--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <script src="./js/main.js" type="module"></script>
+    <script src="./js/CompleteSolution3.js" type="module"></script>
 </body>
 
 </html>
