--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <script src="./js/main.js" type="module"></script>
     <script src="./js/CompleteSolution3.js" type="module"></script>
+    <script src="./js/SyntacticSugar.js" type="module"></script>
 </body>
 
 </html>
